# cyber-kampus-ctf-24

./: README.md  docker-compose.yml
Magic_Book/challenge/: Description.md
Ministry_of_magic_vault/: flag.txt  index.js
Ministry_of_magic_vault/.obsidian/: workspace.json
Ministry_of_magic_vault/src/: index.html
ancient_echoes/challenge/: Dockerfile  ancient_echoes  flag.txt
ancient_echoes/src/: Dockerfile  Makefile  README.md  ancient_echoes  ancient_echoes.c  flag.txt  nsjail.cfg
ancient_echoes/writeup/: README.md
arcane_crack/challenge/: gringotts.txt  scroll_1  scroll_2  scroll_3
archmages_secret/challenge/: docker-compose.yaml
archmages_secret/src/: README  docker-compose.yaml
broken_glyph/: pyproject.toml
broken_glyph/src/: create.py
cryptic_cauldron/: description.md
cryptic_cauldron/chal/: output.txt  source.py
cryptic_cauldron/src/: secret.py
cryptic_cauldron/writeup/: writeup.md
fifology/: README.md
fifology/challenge/: documentation.md
fifology/writeup/: interpreter.py  program.fo  writeup.md
in_the_dark/: README.md
in_the_dark/challenge/: chall
in_the_dark/src/: source.c  source_fixed.c
in_the_dark/writeup/: solve.py  writeup.md
ministry_of_magic_vault/: Dockerfile  index.js  package-lock.json  package.json
ministry_of_magic_vault/src/: index.html
mov_it_mov_it/: README.md
mov_it_mov_it/src/: gen_flag_code.py  source.c
mov_it_mov_it/writeup/: solve.py  writeup.md
prime_conjurer/: description.md
sorcerers_padding/: description.md
trust_issues/: description.md
we_love_casting_spells/: README.md
(+55 files in other folders)
